test/sema/traits/infer_specified_arg_with_trait_err.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
trait A {}

struct S {}

fn foo<T <: A>(x: T) {}

fn main() {
  let s = S{};
  let f = foo;

  // CHECK: [[# @LINE + 1 ]]:5: error: cannot satisfy constraint 'S : A'
  f(s);

  // CHECK: [[# @LINE + 1 ]]:7: error: cannot satisfy constraint 'S : A'
  foo(s);
}
